IMPALA-709: Impala error 'IllegalStateException: constructed predicate failed analysis:' when selecting from a Hive view and predicate operands are not comparable types IMPALA-710: Cleanup log spew from Planner changes

Change-Id: I6b4f024b7af9fe79a434883dd7985dc9996f87e1
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1112
Reviewed-by: Marcel Kornacker <marcel@cloudera.com>
Tested-by: jenkins